import type { Position } from "../../GameState";
import { Entity } from "./Entity";
import { EntityManager } from "./EntityManager";

export abstract class ActiveEntity extends Entity {
  constructor(id: string) {
    super(id);

    // EntityManager에 직접 등록
    EntityManager.add(this);
  }

  public setPosition(position: Position): void {
    this.physicsComponent.setPosition(position.x, position.y);
    this.updateGraphics();
  }

  public getPosition(): Position {
    return this.physicsComponent.getPosition();
  }

  public updateGraphics(): void {
    const position = this.physicsComponent.getPosition();

    this.renderComponent.updatePosition(position.x, position.y);
  }
}
