classDiagram
    class Game {
        -renderer: DisplayManager
        -physics: PhysicsEngine
        -gameState: GameState
        -ballManager: BallManager
        -boundaryManager: BoundaryManager
        -inputManager: InputManager
        +init() void
    }

    class DisplayManager {
        -app: Application
        -centerLayer: Container
        -gameViewport: Container
        +getCenterLayer() Container
        +getGameViewport() Container
    }

    class PhysicsEngine {
        -engine: Engine
        -world: World
        +getWorld() World
        +getEngine() Engine
    }

    class GameState {
        +ballStartPosition: Position
        +ballCount: number
        +isWaiting: boolean
    }

    class BallManager {
        -gameViewport: Container
        -physicsWorld: World
        -gameState: GameState
        -activeBalls: Ball[]
    }

    class BoundaryManager {
        -renderLayer: Container
        -physicsWorld: World
        -physicsEngine: PhysicsEngine
        -boundaries: Map
    }

    class InputManager {
        -layer: Container
    }

    class Ball {
        -physicsComponent: BallPhysicsComponent
        -renderComponent: CircleRenderComponent
    }

    class GameBoundary {
        -physicsComponent: BoundaryPhysicsComponent
        -renderComponent: RectangleRenderComponent
    }

    class EntityManager {
        -entities: Set
        +add(entity) void
        +remove(entity) boolean
    }

    class Entity {
        +physicsComponent: PhysicsComponent
        +renderComponent: RenderComponent
    }

    class ActiveEntity {
        +setPosition(position) void
        +getPosition() Position
    }

    class PhysicsComponent
    class BallPhysicsComponent
    class BoundaryPhysicsComponent
    class RenderComponent
    class CircleRenderComponent
    class RectangleRenderComponent

    Game --> DisplayManager : creates
    Game --> PhysicsEngine : creates
    Game --> GameState : creates
    Game --> BallManager : creates
    Game --> BoundaryManager : creates
    Game --> InputManager : creates

    BallManager --> Ball : creates
    BoundaryManager --> GameBoundary : creates

    Ball --> BallPhysicsComponent : owns
    Ball --> CircleRenderComponent : owns
    GameBoundary --> BoundaryPhysicsComponent : owns
    GameBoundary --> RectangleRenderComponent : owns

    Entity <|-- ActiveEntity
    ActiveEntity <|-- Ball
    Entity <|-- GameBoundary

    PhysicsComponent <|-- BallPhysicsComponent
    PhysicsComponent <|-- BoundaryPhysicsComponent
    RenderComponent <|-- CircleRenderComponent
    RenderComponent <|-- RectangleRenderComponent

    ActiveEntity ..> EntityManager : registers to